include/client.h


typedef struct mpv_handle mpv_handle;
void mpv_suspend(mpv_handle *ctx);
int mpv_command_async(mpv_handle *ctx, uint64_t reply_userdata,
                      const char **args);
typedef enum mpv_event_id {
    MPV_EVENT_NONE              = 0,
    MPV_EVENT_SHUTDOWN          = 1,
    MPV_EVENT_LOG_MESSAGE       = 2,
    MPV_EVENT_GET_PROPERTY_REPLY = 3,
    MPV_EVENT_SET_PROPERTY_REPLY = 4,
    MPV_EVENT_COMMAND_REPLY     = 5,
    MPV_EVENT_START_FILE        = 6,
    MPV_EVENT_END_FILE          = 7,
    MPV_EVENT_FILE_LOADED       = 8,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_TRACKS_CHANGED    = 9,
    MPV_EVENT_TRACK_SWITCHED    = 10,
    MPV_EVENT_IDLE              = 11,
    MPV_EVENT_PAUSE             = 12,
    MPV_EVENT_UNPAUSE           = 13,
    MPV_EVENT_TICK              = 14,
    MPV_EVENT_SCRIPT_INPUT_DISPATCH = 15,
#endif
    MPV_EVENT_CLIENT_MESSAGE    = 16,
    MPV_EVENT_VIDEO_RECONFIG    = 17,
    MPV_EVENT_AUDIO_RECONFIG    = 18,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_METADATA_UPDATE   = 19,
#endif
    MPV_EVENT_SEEK              = 20,
    MPV_EVENT_PLAYBACK_RESTART  = 21,
    MPV_EVENT_PROPERTY_CHANGE   = 22,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_CHAPTER_CHANGE    = 23,
#endif
    MPV_EVENT_QUEUE_OVERFLOW    = 24,
    MPV_EVENT_HOOK              = 25,
} mpv_event_id;
typedef struct mpv_event_hook {
    const char *name;
    uint64_t id;
} mpv_event_hook;
typedef struct mpv_event {
    mpv_event_id event_id;
    int error;
    uint64_t reply_userdata;
    void *data;
} mpv_event;
mpv_event *mpv_wait_event(mpv_handle *ctx, double timeout);
void mpv_wakeup(mpv_handle *ctx);
void mpv_set_wakeup_callback(mpv_handle *ctx, void (*cb)(void *d), void *d);
void mpv_wait_async_requests(mpv_handle *ctx);
int mpv_hook_add(mpv_handle *ctx, uint64_t reply_userdata,
                 const char *name, int priority);
int mpv_hook_continue(mpv_handle *ctx, uint64_t id);
int mpv_get_wakeup_pipe(mpv_handle *ctx);
typedef enum mpv_sub_api {
    MPV_SUB_API_OPENGL_CB = 1
} mpv_sub_api;
void *mpv_get_sub_api(mpv_handle *ctx, mpv_sub_api sub_api);