lib/mpv_bindings.dart


  /// Interrupt the current mpv_wait_event() call. This will wake up the thread
  /// currently waiting in mpv_wait_event(). If no thread is waiting, the next
  /// mpv_wait_event() call will return immediately (this is to avoid lost
  /// wakeups).
  ///
  /// mpv_wait_event() will receive a MPV_EVENT_NONE if it's woken up due to
  /// this call. But note that this dummy event might be skipped if there are
  /// already other events queued. All what counts is that the waiting thread
  /// is woken up at all.
  ///
  /// Safe to be called from mpv render API threads.
  void mpv_wakeup(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_wakeup(
      ctx,
    );
  }

  late final _mpv_wakeupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_wakeup');
  late final _mpv_wakeup =
      _mpv_wakeupPtr.asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// Set a custom function that should be called when there are new events. Use
  /// this if blocking in mpv_wait_event() to wait for new events is not feasible.
  ///
  /// Keep in mind that the callback will be called from foreign threads. You
  /// must not make any assumptions of the environment, and you must return as
  /// soon as possible (i.e. no long blocking waits). Exiting the callback through
  /// any other means than a normal return is forbidden (no throwing exceptions,
  /// no longjmp() calls). You must not change any local thread state (such as
  /// the C floating point environment).
  ///
  /// You are not allowed to call any client API functions inside of the callback.
  /// In particular, you should not do any processing in the callback, but wake up
  /// another thread that does all the work. The callback is meant strictly for
  /// notification only, and is called from arbitrary core parts of the player,
  /// that make no considerations for reentrant API use or allowing the callee to
  /// spend a lot of time doing other things. Keep in mind that it's also possible
  /// that the callback is called from a thread while a mpv API function is called
  /// (i.e. it can be reentrant).
  ///
  /// In general, the client API expects you to call mpv_wait_event() to receive
  /// notifications, and the wakeup callback is merely a helper utility to make
  /// this easier in certain situations. Note that it's possible that there's
  /// only one wakeup callback invocation for multiple events. You should call
  /// mpv_wait_event() with no timeout until MPV_EVENT_NONE is reached, at which
  /// point the event queue is empty.
  ///
  /// If you actually want to do processing in a callback, spawn a thread that
  /// does nothing but call mpv_wait_event() in a loop and dispatches the result
  /// to a callback.
  ///
  /// Only one wakeup callback can be set.
  ///
  /// @param cb function that should be called if a wakeup is required
  /// @param d arbitrary userdata passed to cb
  void mpv_set_wakeup_callback(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
        cb,
    ffi.Pointer<ffi.Void> d,
  ) {
    return _mpv_set_wakeup_callback(
      ctx,
      cb,
      d,
    );
  }

  late final _mpv_set_wakeup_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<mpv_handle>,
              ffi.Pointer<
                  ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>,
              ffi.Pointer<ffi.Void>)>>('mpv_set_wakeup_callback');
  late final _mpv_set_wakeup_callback = _mpv_set_wakeup_callbackPtr.asFunction<
      void Function(
          ffi.Pointer<mpv_handle>,
          ffi.Pointer<
              ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>,
          ffi.Pointer<ffi.Void>)>();

  /// Block until all asynchronous requests are done. This affects functions like
  /// mpv_command_async(), which return immediately and return their result as
  /// events.
  ///
  /// This is a helper, and somewhat equivalent to calling mpv_wait_event() in a
  /// loop until all known asynchronous requests have sent their reply as event,
  /// except that the event queue is not emptied.
  ///
  /// In case you called mpv_suspend() before, this will also forcibly reset the
  /// suspend counter of the given handle.
  void mpv_wait_async_requests(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_wait_async_requests(
      ctx,
    );
  }

  late final _mpv_wait_async_requestsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_wait_async_requests');
  late final _mpv_wait_async_requests = _mpv_wait_async_requestsPtr
      .asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// A hook is like a synchronous event that blocks the player. You register
  /// a hook handler with this function. You will get an event, which you need
  /// to handle, and once things are ready, you can let the player continue with
  /// mpv_hook_continue().
  ///
  /// Currently, hooks can't be removed explicitly. But they will be implicitly
  /// removed if the mpv_handle it was registered with is destroyed. This also
  /// continues the hook if it was being handled by the destroyed mpv_handle (but
  /// this should be avoided, as it might mess up order of hook execution).
  ///
  /// Hook handlers are ordered globally by priority and order of registration.
  /// Handlers for the same hook with same priority are invoked in order of
  /// registration (the handler registered first is run first). Handlers with
  /// lower priority are run first (which seems backward).
  ///
  /// See the "Hooks" section in the manpage to see which hooks are currently
  /// defined.
  ///
  /// Some hooks might be reentrant (so you get multiple MPV_EVENT_HOOK for the
  /// same hook). If this can happen for a specific hook type, it will be
  /// explicitly documented in the manpage.
  ///
  /// Only the mpv_handle on which this was called will receive the hook events,
  /// or can "continue" them.
  ///
  /// @param reply_userdata This will be used for the mpv_event.reply_userdata
  /// field for the received MPV_EVENT_HOOK events.
  /// If you have no use for this, pass 0.
  /// @param name The hook name. This should be one of the documented names. But
  /// if the name is unknown, the hook event will simply be never
  /// raised.
  /// @param priority See remarks above. Use 0 as a neutral default.
  /// @return error code (usually fails only on OOM)
  int mpv_hook_add(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
    ffi.Pointer<ffi.Char> name,
    int priority,
  ) {
    return _mpv_hook_add(
      ctx,
      reply_userdata,
      name,
      priority,
    );
  }

  late final _mpv_hook_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('mpv_hook_add');
  late final _mpv_hook_add = _mpv_hook_addPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, int, ffi.Pointer<ffi.Char>, int)>();

  /// Respond to a MPV_EVENT_HOOK event. You must call this after you have handled
  /// the event. There is no way to "cancel" or "stop" the hook.
  ///
  /// Calling this will will typically unblock the player for whatever the hook
  /// is responsible for (e.g. for the "on_load" hook it lets it continue
  /// playback).
  ///
  /// It is explicitly undefined behavior to call this more than once for each
  /// MPV_EVENT_HOOK, to pass an incorrect ID, or to call this on a mpv_handle
  /// different from the one that registered the handler and received the event.
  ///
  /// @param id This must be the value of the mpv_event_hook.id field for the
  /// corresponding MPV_EVENT_HOOK.
  /// @return error code
  int mpv_hook_continue(
    ffi.Pointer<mpv_handle> ctx,
    int id,
  ) {
    return _mpv_hook_continue(
      ctx,
      id,
    );
  }

  late final _mpv_hook_continuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_handle>, ffi.Int)>>('mpv_hook_continue');
  late final _mpv_hook_continue = _mpv_hook_continuePtr
      .asFunction<int Function(ffi.Pointer<mpv_handle>, int)>();

  /// Return a UNIX file descriptor referring to the read end of a pipe. This
  /// pipe can be used to wake up a poll() based processing loop. The purpose of
  /// this function is very similar to mpv_set_wakeup_callback(), and provides
  /// a primitive mechanism to handle coordinating a foreign event loop and the
  /// libmpv event loop. The pipe is non-blocking. It's closed when the mpv_handle
  /// is destroyed. This function always returns the same value (on success).
  ///
  /// This is in fact implemented using the same underlying code as for
  /// mpv_set_wakeup_callback() (though they don't conflict), and it is as if each
  /// callback invocation writes a single 0 byte to the pipe. When the pipe
  /// becomes readable, the code calling poll() (or select()) on the pipe should
  /// read all contents of the pipe and then call mpv_wait_event(c, 0) until
  /// no new events are returned. The pipe contents do not matter and can just
  /// be discarded. There is not necessarily one byte per readable event in the
  /// pipe. For example, the pipes are non-blocking, and mpv won't block if the
  /// pipe is full. Pipes are normally limited to 4096 bytes, so if there are
  /// more than 4096 events, the number of readable bytes can not equal the number
  /// of events queued. Also, it's possible that mpv does not write to the pipe
  /// once it's guaranteed that the client was already signaled. See the example
  /// below how to do it correctly.
  ///
  /// Example:
  ///
  /// int pipefd = mpv_get_wakeup_pipe(mpv);
  /// if (pipefd < 0)
  /// error();
  /// while (1) {
  /// struct pollfd pfds[1] = {
  /// { .fd = pipefd, .events = POLLIN },
  /// };
  /// // Wait until there are possibly new mpv events.
  /// poll(pfds, 1, -1);
  /// if (pfds[0].revents & POLLIN) {
  /// // Empty the pipe. Doing this before calling mpv_wait_event()
  /// // ensures that no wakeups are missed. It's not so important to
  /// // make sure the pipe is really empty (it will just cause some
  /// // additional wakeups in unlikely corner cases).
  /// char unused[256];
  /// read(pipefd, unused, sizeof(unused));
  /// while (1) {
  /// mpv_event *ev = mpv_wait_event(mpv, 0);
  /// // If MPV_EVENT_NONE is received, the event queue is empty.
  /// if (ev->event_id == MPV_EVENT_NONE)
  /// break;
  /// // Process the event.
  /// ...
  /// }
  /// }
  /// }
  ///
  /// @deprecated this function will be removed in the future. If you need this
  /// functionality, use mpv_set_wakeup_callback(), create a pipe
  /// manually, and call write() on your pipe in the callback.
  ///
  /// @return A UNIX FD of the read end of the wakeup pipe, or -1 on error.
  /// On MS Windows/MinGW, this will always return -1.
  int mpv_get_wakeup_pipe(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_get_wakeup_pipe(
      ctx,
    );
  }

  late final _mpv_get_wakeup_pipePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_get_wakeup_pipe');
  late final _mpv_get_wakeup_pipe = _mpv_get_wakeup_pipePtr
      .asFunction<int Function(ffi.Pointer<mpv_handle>)>();

  /// This is used for additional APIs that are not strictly part of the core API.
  /// See the individual mpv_sub_api member values.
  ///
  /// @deprecated use render.h
  ffi.Pointer<ffi.Void> mpv_get_sub_api(
    ffi.Pointer<mpv_handle> ctx,
    int sub_api,
  ) {
    return _mpv_get_sub_api(
      ctx,
      sub_api,
    );
  }
